manifests/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${app_name}
  name: ${app_name}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${app_name}
  template:
    metadata:
      labels:
        app: ${app_name}
    spec:
      containers:
      - image: ${app_name}:${image_tag}
        name: ${app_name}
        ports:
          - containerPort: ${port}
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 100Mi
