manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app_name}
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: ${app_name}
