manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${app_name}
spec:
  ingressClassName: nginx
  rules:
    - host: ${app_name}.${app_domain}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${app_name}
                port: 
                  number: ${port}
